<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_hosts"
            android:gravity="center"/>
        <TextView
            android:id="@+id/current_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown_hosts"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#ff4444"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_hosts"
            android:layout_marginTop="30dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/last_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown_hosts"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#0000ff"/>

        <Button
            android:id="@+id/update_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/check_hosts"/>
        <Button
            android:id="@+id/apply_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/apply_hosts"
            android:enabled="false"/>
        <Button
            android:id="@+id/original_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/original_hosts"/>
    </LinearLayout>

</RelativeLayout>
